# sessionnotes

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/sessionnotes/: __init__.py  cli.py  models.py  report.py
src/sessionnotes/analyzer/: __init__.py  progress.py  risk.py  themes.py
src/sessionnotes/generator/: __init__.py  birp.py  dap.py  soap.py
tests/: test_analyzers.py  test_benchmark.py  test_core.py  test_generators.py  test_integration.py  test_models.py
